# Django-Developer-Practical-Test

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  test.py
CVProject/: cv-fixture.json
CVProject/CVProject/: celery.py  settings.py  urls.py
CVProject/audit/: middleware.py  models.py  tests.py  urls.py  views.py
CVProject/audit/migrations/: 0001_initial.py
CVProject/audit/templates/: logs.html
CVProject/main/: context_processors.py  forms.py  models.py  serializers.py  tasks.py  tests.py  translation.py  urls.py  views.py
CVProject/main/migrations/: 0001_initial.py
CVProject/main/templates/: base.html  detail.html  home.html  settings.html
